[package]
name = "bacnet-simulator"
version = "0.2.0"
edition = "2024"
description = "Config-driven BACnet/IP building simulator that emulates many devices and realistic point behavior."
license = "Apache-2.0"
repository = "https://github.com/NETIX-AI-OSS/bacnet-simulator"
readme = "README.md"

[dependencies]
bacnet-rs = "0.3.0"
bacnet-services = "0.9.0"
bacnet-types = "0.9.0"
bytes = "1.10"
chrono = "0.4.45"
env_logger = "0.11.10"
log = "0.4.32"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
